@@ -2,6 +2,8 @@
 
 * Correctly raise error when using an invalid virtual row block function call (jeremyevans)
 
+* Support REPLACE on SQLite via Dataset#replace and #multi_replace (etehtsea) (#681)
+
 === 4.0.0 (2013-07-01)
 
 * Correctly parse composite primary keys on SQLite 3.7.16+ (jeremyevans)
